--- a/html/work.html
+++ b/html/work.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Efecto Blur Inferior</title>
+  <title>Work</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/styleWork.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg px-3 sticky-top" style="background-color: #F5F5F5;">
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="./index.html">CoderHub</a>
+      <a class="navbar-brand" href="../index.html">CoderHub</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,13 +38,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home.</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home.</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./html/about.html">About.</a>
+            <a class="nav-link" href="../html/about.html">About.</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./html/work.html">Work.</a>
+            <a class="nav-link" href="../html/work.html">Work.</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact.</a>
@@ -55,8 +55,351 @@
   </nav>
 
 
-  holas
 
+  <div class="container-fluid my-5 p-2" style="height: 75vh;">
+    <div class="row tipoDeFuente tituloSF">
+      work.
+    </div>
+    <div class="row tipoDeFuente tituloSP">
+      <div class="col-md-1"></div>
+      Building spatial computing software for the world’s most innovative enterprises.
+    </div>
+  </div>
+
+  <!-- contenido works -->
+
+  <section class="work-section">
+    <div class="container-fluid px-4">
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+        </div>
+      </div>
+      <div class="row g-4 align-items-center">
+        <div class="col-12 col-lg-7">
+          <div class="position-relative">
+            <img src="../img/work1.png" alt="Data Visualization Project" class="work-image"
+              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div class="image-placeholder" style="display: none;">
+              <span>📊 Data Visualization</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <div class="card work-card h-100">
+            <h5 class="card-header tipoDeFuente tituloS">📈 Visualización Avanzada</h5>
+            <div class="card-body">
+              <h5 class="card-title">Dashboard Interactivo de Datos</h5>
+              <p class="tipoDeFuente tituloP">
+                Plataforma completa de visualización de datos con gráficos interactivos,
+                filtros dinámicos y análisis en tiempo real para la toma de decisiones basada en datos.
+              </p>
+              <a href="#" class="btn btn-custom">Ver Proyecto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="section-divider">
+  </section>
+
+  <section class="work-section">
+    <div class="container-fluid px-4">
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+        </div>
+      </div>
+      <div class="row g-4 align-items-center">
+        <div class="col-12 col-lg-7">
+          <div class="position-relative">
+            <img src="../img/work2.png" alt="Data Visualization Project" class="work-image"
+              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div class="image-placeholder" style="display: none;">
+              <span>📊 Data Visualization</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <div class="card work-card h-100">
+            <h5 class="card-header tipoDeFuente tituloS">📈 Visualización Avanzada</h5>
+            <div class="card-body">
+              <h5 class="card-title">Dashboard Interactivo de Datos</h5>
+              <p class="tipoDeFuente tituloP">
+                Plataforma completa de visualización de datos con gráficos interactivos,
+                filtros dinámicos y análisis en tiempo real para la toma de decisiones basada en datos.
+              </p>
+              <a href="#" class="btn btn-custom">Ver Proyecto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="section-divider">
+  </section>
+
+
+  <section class="work-section">
+    <div class="container-fluid px-4">
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+        </div>
+      </div>
+      <div class="row g-4 align-items-center">
+        <div class="col-12 col-lg-7">
+          <div class="position-relative">
+            <img src="../img/work3.png" alt="Data Visualization Project" class="work-image"
+              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div class="image-placeholder" style="display: none;">
+              <span>📊 Data Visualization</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <div class="card work-card h-100">
+            <h5 class="card-header tipoDeFuente tituloS">📈 Visualización Avanzada</h5>
+            <div class="card-body">
+              <h5 class="card-title">Dashboard Interactivo de Datos</h5>
+              <p class="tipoDeFuente tituloP">
+                Plataforma completa de visualización de datos con gráficos interactivos,
+                filtros dinámicos y análisis en tiempo real para la toma de decisiones basada en datos.
+              </p>
+              <a href="#" class="btn btn-custom">Ver Proyecto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="section-divider">
+  </section>
+
+
+  <section class="work-section">
+    <div class="container-fluid px-4">
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+        </div>
+      </div>
+      <div class="row g-4 align-items-center">
+        <div class="col-12 col-lg-7">
+          <div class="position-relative">
+            <img src="../img/work4.png" alt="Data Visualization Project" class="work-image"
+              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div class="image-placeholder" style="display: none;">
+              <span>📊 Data Visualization</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <div class="card work-card h-100">
+            <h5 class="card-header tipoDeFuente tituloS">📈 Visualización Avanzada</h5>
+            <div class="card-body">
+              <h5 class="card-title">Dashboard Interactivo de Datos</h5>
+              <p class="tipoDeFuente tituloP">
+                Plataforma completa de visualización de datos con gráficos interactivos,
+                filtros dinámicos y análisis en tiempo real para la toma de decisiones basada en datos.
+              </p>
+              <a href="#" class="btn btn-custom">Ver Proyecto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="section-divider">
+  </section>
+
+
+  <section class="work-section">
+    <div class="container-fluid px-4">
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+        </div>
+      </div>
+      <div class="row g-4 align-items-center">
+        <div class="col-12 col-lg-7">
+          <div class="position-relative">
+            <img src="../img/work5.png" alt="Data Visualization Project" class="work-image"
+              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div class="image-placeholder" style="display: none;">
+              <span>📊 Data Visualization</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <div class="card work-card h-100">
+            <h5 class="card-header tipoDeFuente tituloS">📈 Visualización Avanzada</h5>
+            <div class="card-body">
+              <h5 class="card-title">Dashboard Interactivo de Datos</h5>
+              <p class="tipoDeFuente tituloP">
+                Plataforma completa de visualización de datos con gráficos interactivos,
+                filtros dinámicos y análisis en tiempo real para la toma de decisiones basada en datos.
+              </p>
+              <a href="#" class="btn btn-custom">Ver Proyecto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="section-divider">
+  </section>
+
+
+  <section class="work-section">
+    <div class="container-fluid px-4">
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+        </div>
+      </div>
+      <div class="row g-4 align-items-center">
+        <div class="col-12 col-lg-7">
+          <div class="position-relative">
+            <img src="../img/work1.png" alt="Data Visualization Project" class="work-image"
+              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div class="image-placeholder" style="display: none;">
+              <span>📊 Data Visualization</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <div class="card work-card h-100">
+            <h5 class="card-header tipoDeFuente tituloS">📈 Visualización Avanzada</h5>
+            <div class="card-body">
+              <h5 class="card-title">Dashboard Interactivo de Datos</h5>
+              <p class="tipoDeFuente tituloP">
+                Plataforma completa de visualización de datos con gráficos interactivos,
+                filtros dinámicos y análisis en tiempo real para la toma de decisiones basada en datos.
+              </p>
+              <a href="#" class="btn btn-custom">Ver Proyecto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="section-divider">
+  </section>
+
+
+  <section class="work-section">
+    <div class="container-fluid px-4">
+      <div class="row my-4">
+        <div class="col-12">
+          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+        </div>
+      </div>
+      <div class="row g-4 align-items-center">
+        <div class="col-12 col-lg-7">
+          <div class="position-relative">
+            <img src="../img/work1.png" alt="Data Visualization Project" class="work-image"
+              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div class="image-placeholder" style="display: none;">
+              <span>📊 Data Visualization</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-5">
+          <div class="card work-card h-100">
+            <h5 class="card-header tipoDeFuente tituloS">📈 Visualización Avanzada</h5>
+            <div class="card-body">
+              <h5 class="card-title">Dashboard Interactivo de Datos</h5>
+              <p class="tipoDeFuente tituloP">
+                Plataforma completa de visualización de datos con gráficos interactivos,
+                filtros dinámicos y análisis en tiempo real para la toma de decisiones basada en datos.
+              </p>
+              <a href="#" class="btn btn-custom">Ver Proyecto</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="section-divider">
+  </section>
+
+  <!-- seccion de contacto -->
+  <section class="container-fluid mt-5 py-5 rounded-5">
+    <section class="container-fluid bg-dark text-light shadow border-4 py-5 px-2 rounded-4">
+      <div class="row justify-content-center align-items-center ">
+        <!-- Columna izquierda: Formulario -->
+        <div class="col-md-5">
+          <div class="bg-white text-dark p-4 rounded shadow d-flex flex-column g-5">
+            <h4 class="tipoDeFuente tituloS">Ready to <span class="text-primary">build XR?</span></h4>
+            <form>
+              <div class="mb-3">
+                <label class="form-label">Name*</label>
+                <input type="text" class="form-control" placeholder="Full name">
+              </div>
+              <div class="mb-3">
+                <label class="form-label">E-mail*</label>
+                <input type="email" class="form-control" placeholder="Work email">
+              </div>
+              <div class="mb-3">
+                <label class="form-label">How did you hear about us?</label>
+                <input type="text" class="form-control" placeholder="e.g. LinkedIn, ChatGPT...">
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Message*</label>
+                <textarea class="form-control" rows="3" placeholder="Your message"></textarea>
+              </div>
+              <button type="submit" class="btn btn-dark w-100 rounded-pill">Send Message</button>
+            </form>
+          </div>
+        </div>
+
+        <!-- Columna derecha: Texto -->
+        <div class="col-md-6 ps-md-5 mt-4 mt-md-0">
+          <h1 class="tipoDeFuente tituloF">Let's talk.</h1>
+          <p class="lead">
+            Partner with <span class="tipoDeFuente tituloS">CoderHub</span> to build your next XR project.
+          </p>
+          <hr>
+          <ul class="list-unstyled row g-2">
+            <li class="col-6"><i class="bi bi-check-circle me-2"></i>End-to-End Delivery</li>
+            <li class="col-6"><i class="bi bi-lightning-charge me-2"></i>Startup Speed</li>
+            <li class="col-6"><i class="bi bi-people me-2"></i>Long-Term Partnership</li>
+            <li class="col-6"><i class="bi bi-code-slash me-2"></i>Full IP Ownership</li>
+            <li class="col-6"><i class="bi bi-award me-2"></i>World-Class Team</li>
+            <li class="col-6"><i class="bi bi-building me-2"></i>Enterprise-Grade</li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+  </section>
+
+
+  <section class="container-fluid my-5 px-4">
+    <div class="row border shadow rounded-4">
+      <div class="col-3 d-flex align-items-start flex-column mt-5 justify-content-center ps-2">
+        <h2 class="tipoDeFuente tituloS ">Social.</h2>
+        <button type="submit" class="btn btn-outline-primary"> <i class="bi bi-linkedin"></i> LinkedIn</button>
+      </div>
+      <div class="col-9">
+        <div class="container">
+          <div class="row g-5">
+            <h2 class="tipoDeFuente tituloF">Newsletter</h2>
+
+            <form class="newsletter-form">
+              <div class="mb-3">
+                <input type="email" class="form-control form-control-custom" placeholder="Email *" required>
+              </div>
+
+              <button type="submit" class="btn btn-danger">
+                Subscribe
+                <span class="ms-2"> <i class="bi bi-arrow-bar-up"></i> </span>
+              </button>
+            </form>
+            <p class="tipoDeFuente tituloP">
+              Join our newsletter for updates on the<br>
+              latest in spatial computing and XR.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
