--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
             <div class="row h-75 align-items-center px-1">
                 <div class="col">
                     <h1 class="tipoDeFuente tituloF">CoderHub</h1>
-                    <h3 class="ps-5 tipoDeFuente tituloSS">XR Studio for Enterprise</h3>
+                    <h3 class="ps-5 tipoDeFuente tituloS">XR Studio for Enterprise</h3>
                 </div>
             </div>
             <div class="row h-25 px-5 pb-5">
                 <div class="d-flex justify-content-between align-items-center">
-                    <p class="tipoDeFuente tituloSP">
+                    <p class="tipoDeFuente tituloP">
                         Transforming bold ideas into spatial computing apps.
                     </p>
                     <a href="#">[]</a>
@@ -233,7 +233,8 @@
                 </p>
             </div>
             <div class="col-12 col-lg-9">
-                <h2 class="tipoDeFuente tituloS">Enterprises choose Treeview <br> because we offer </h2>
+                <h2 class="tipoDeFuente tituloS">Enterprises choose CoderHub </h2>
+                <h3 class="tipoDeFuente titulop"> because we offer</h3>
             </div>
         </div>
     </section>
@@ -288,8 +289,8 @@
 
 
     <!-- seccion de contacto -->
-    <section class="container-fluid mt-5">
-        <section class="container-fluid bg-dark text-light shadow border-4 border border-primary p-3">
+    <section class="container-fluid mt-5 py-5 rounded-5">
+        <section class="container-fluid bg-dark text-light shadow border-4 py-5 px-2 rounded-4">
             <div class="row justify-content-center align-items-center ">
                 <!-- Columna izquierda: Formulario -->
                 <div class="col-md-5">
@@ -321,7 +322,7 @@
                 <div class="col-md-6 ps-md-5 mt-4 mt-md-0">
                     <h1 class="tipoDeFuente tituloF">Let's talk.</h1>
                     <p class="lead">
-                        Partner with <span class="tipoDeFuente tituloS">Treeview</span> to build your next XR project.
+                        Partner with <span class="tipoDeFuente tituloS">CoderHub</span> to build your next XR project.
                     </p>
                     <hr>
                     <ul class="list-unstyled row g-2">
@@ -340,7 +341,7 @@
 
 
     <section class="container-fluid my-5 px-4">
-        <div class="row border shadow rounded-5 border border-primary">
+        <div class="row border shadow rounded-4">
             <div class="col-3 d-flex align-items-start flex-column mt-5 justify-content-center ps-2">
                 <h2 class="tipoDeFuente tituloS ">Social.</h2>
                 <button type="submit" class="btn btn-outline-primary"> <i class="bi bi-linkedin"></i> LinkedIn</button>
