--- a/html/work.html
+++ b/html/work.html
@@ -56,7 +56,7 @@
 
 
 
-  <div class="container-fluid my-5 p-2" style="height: 75vh;">
+  <div class="container-fluid my-5 p-5" style="height: 75vh;">
     <div class="row tipoDeFuente tituloSF">
       work.
     </div>
@@ -68,11 +68,11 @@
 
   <!-- contenido works -->
 
-  <section class="work-section">
+  <section class="work-section my-5">
     <div class="container-fluid px-4">
       <div class="row my-4">
         <div class="col-12">
-          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+          <h2 class="tipoDeFuente tituloSS">Data Visualization</h2>
         </div>
       </div>
       <div class="row g-4 align-items-center">
@@ -99,15 +99,14 @@
           </div>
         </div>
       </div>
-    </div>
-    <hr class="section-divider">
+    </div>    
   </section>
 
-  <section class="work-section">
+  <section class="work-section my-5">
     <div class="container-fluid px-4">
       <div class="row my-4">
         <div class="col-12">
-          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+          <h2 class="tipoDeFuente tituloSS">Mobile health</h2>
         </div>
       </div>
       <div class="row g-4 align-items-center">
@@ -135,21 +134,21 @@
         </div>
       </div>
     </div>
-    <hr class="section-divider">
+    
   </section>
 
 
-  <section class="work-section">
+  <section class="work-section my-5 pt-5">
     <div class="container-fluid px-4">
       <div class="row my-4">
         <div class="col-12">
-          <h2 class="tipoDeFuente tituloF">Data Visualization</h2>
+          <h2 class="tipoDeFuente tituloSS">Data Visualization</h2>
         </div>
       </div>
       <div class="row g-4 align-items-center">
         <div class="col-12 col-lg-7">
           <div class="position-relative">
-            <img src="../img/work3.png" alt="Data Visualization Project" class="work-image"
+            <img src="../img/work33.png" alt="Data Visualization Project" class="work-image"
               onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
             <div class="image-placeholder" style="display: none;">
               <span>📊 Data Visualization</span>
@@ -221,7 +220,7 @@
       <div class="row g-4 align-items-center">
         <div class="col-12 col-lg-7">
           <div class="position-relative">
-            <img src="../img/work5.png" alt="Data Visualization Project" class="work-image"
+            <img src="../img/work9.png" alt="Data Visualization Project" class="work-image"
               onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
             <div class="image-placeholder" style="display: none;">
               <span>📊 Data Visualization</span>
@@ -246,6 +245,7 @@
     <hr class="section-divider">
   </section>
 
+  <!-- . -->
 
   <section class="work-section">
     <div class="container-fluid px-4">
@@ -257,7 +257,7 @@
       <div class="row g-4 align-items-center">
         <div class="col-12 col-lg-7">
           <div class="position-relative">
-            <img src="../img/work1.png" alt="Data Visualization Project" class="work-image"
+            <img src="../img/work6.png" alt="Data Visualization Project" class="work-image"
               onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
             <div class="image-placeholder" style="display: none;">
               <span>📊 Data Visualization</span>
@@ -282,6 +282,7 @@
     <hr class="section-divider">
   </section>
 
+  <!-- . -->
 
   <section class="work-section">
     <div class="container-fluid px-4">
@@ -293,7 +294,7 @@
       <div class="row g-4 align-items-center">
         <div class="col-12 col-lg-7">
           <div class="position-relative">
-            <img src="../img/work1.png" alt="Data Visualization Project" class="work-image"
+            <img src="../img/work55.png" alt="Data Visualization Project" class="work-image"
               onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
             <div class="image-placeholder" style="display: none;">
               <span>📊 Data Visualization</span>
