--- a/index.html
+++ b/index.html
@@ -28,20 +28,6 @@
     </section>
 
 
-    <!-- nav 
-    <nav class="navbar navbar-expand-lg  bg-light sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">DevHouse</a>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" data-section="home" href="./index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" data-section="about" href="./html/about.html">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" data-section="portfolio">Portafolio</a></li>
-                <li class="nav-item"><a class="nav-link" data-section="services">Servicios</a></li>
-                <li class="nav-item"><a class="nav-link" data-section="contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-    -->
     <nav class="navbar navbar-expand-lg px-3 sticky-top" style="background-color: #F5F5F5;">
         <div class="container-fluid">
 
@@ -182,7 +168,7 @@
             </div>
         </div>
         <div class="container-fluid pe-3 d-flex justify-content-end">
-            <a href="#" class="btn btn-dark rounded-pill">
+            <a href="./html/work.html" class="btn btn-dark rounded-pill">
                 View more work
             </a>
         </div>
@@ -282,7 +268,7 @@
         </div>
         <div class="container-fluid pe-5 d-flex m-3 justify-content-end">
             <a href="./html/about.html" class="btn btn-dark rounded-pill">
-                View more work
+                About us
             </a>
         </div>
     </div>
