--- a/html/work.html
+++ b/html/work.html
@@ -69,57 +69,56 @@
   <!-- contenido works -->
 
   <div class="container-fluid row g-4 p-3">
-    
+
     <div class="col-12 col-md-6 col-lg-4 fade-in">
-      <div class="card shadow-sm border-0 rounded-4">        
+      <div class="card shadow-sm border-0 rounded-4">
         <div class="card-header bg-white border-0 text-center">
-          <h5 class="card-title mb-0 fw-semibold text-dark">Dashboard de Datos</h5>
+          <h5 class="card-title mb-0 fw-semibold text-dark"> Digital Data Visualization </h5>
         </div>
 
-        
-        <img src="../img/work1.png" alt="Dashboard de Datos" class="project-image w-100"
-          >
+
+        <img src="../img/work1.png" alt="Dashboard de Datos" class="project-image w-100">
         <div
-          class="image-placeholder bg-primary d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
-          📊 Dashboard de Datos
+          class="image-placeholder bg-dark d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
+          <i class="bi bi-circle-fill pe-2"></i>
+          Dashboard de Datos
         </div>
 
         <div class="card-body d-flex flex-column">
-          <!-- Descripción -->
           <p class="card-text text-muted flex-grow-1">
             Plataforma interactiva de visualización de datos con gráficos dinámicos,
             filtros avanzados y reportes en tiempo real para análisis empresarial.
           </p>
 
-          <!-- Botón conocer más -->
-          <a href="#" class="btn btn-primary btn-lg rounded-pill mt-auto">
+          <a href="#" class="btn btn-dark btn-lg rounded-pill mt-auto">
             Conocer Más
           </a>
         </div>
       </div>
-    </div>    
+    </div>
 
-    <!-- Proyecto 3 -->
+
     <div class="col-12 col-md-6 col-lg-4 fade-in">
       <div class="card h-100 shadow-sm border-0 rounded-4">
         <div class="card-header bg-white border-0 text-center">
-          <h5 class="card-title mb-0 fw-semibold text-dark">Sistema de IA Analytics</h5>
+          <h5 class="card-title mb-0 fw-semibold text-dark">AI Business Software</h5>
         </div>
 
         <img src="../img/work3.png" alt="IA Analytics" class="project-image w-100"
           onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         <div
-          class="image-placeholder bg-warning d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
-          🤖 IA Analytics
+          class="image-placeholder bg-dark d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
+          <i class="bi bi-circle-fill pe-2"></i>
+          IA Analytics
         </div>
 
         <div class="card-body d-flex flex-column">
           <p class="card-text text-muted flex-grow-1">
-            Sistema inteligente que combina machine learning con visualización de datos
-            para generar insights predictivos y análisis automatizados.
+            Plataforma web interactiva que integra mapas, ubicaciones y contenidos dinámicos para visualización
+            geográfica y seguimiento en tiempo real.
           </p>
 
-          <a href="#" class="btn btn-warning btn-lg rounded-pill mt-auto">
+          <a href="#" class="btn btn-dark btn-lg rounded-pill mt-auto">
             Conocer Más
           </a>
         </div>
@@ -136,17 +135,18 @@
         <img src="../img/work4.png" alt="App Mobile" class="project-image w-100"
           onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         <div
-          class="image-placeholder bg-info d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
-          📱 App Mobile
+          class="image-placeholder bg-dark d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
+          <i class="bi bi-circle-fill pe-2"></i>
+          DateBase
         </div>
 
         <div class="card-body d-flex flex-column">
           <p class="card-text text-muted flex-grow-1">
-            Aplicación móvil multiplataforma con diseño moderno, funcionalidades avanzadas
-            y sincronización en tiempo real con servicios en la nube.
+            Sistema de gestión de bases de datos eficiente, con consultas optimizadas, integridad de la información y
+            soporte para análisis en tiempo real.
           </p>
 
-          <a href="#" class="btn btn-info btn-lg rounded-pill mt-auto">
+          <a href="#" class="btn btn-info btn-dark rounded-pill mt-auto">
             Conocer Más
           </a>
         </div>
@@ -157,23 +157,24 @@
     <div class="col-12 col-md-6 col-lg-4 fade-in">
       <div class="card h-100 shadow-sm border-0 rounded-4">
         <div class="card-header bg-white border-0 text-center">
-          <h5 class="card-title mb-0 fw-semibold text-dark">E-commerce Completo</h5>
+          <h5 class="card-title mb-0 fw-semibold text-dark">Virtual learning</h5>
         </div>
 
-        <img src="../img/work9.png" alt="E-commerce" class="project-image w-100"
+        <img src="../img/work9.png" alt="Learning" class="project-image w-100"
           onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         <div
-          class="image-placeholder bg-danger d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
-          🛒 E-commerce
+          class="image-placeholder bg-dark d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
+          <i class="bi bi-circle-fill pe-2"></i>
+          Virtual
         </div>
 
         <div class="card-body d-flex flex-column">
           <p class="card-text text-muted flex-grow-1">
-            Plataforma de comercio electrónico integral con carrito de compras,
-            pasarelas de pago seguras y panel administrativo completo.
+            Plataforma de aprendizaje virtual interactiva, con cursos multimedia, seguimiento del progreso y
+            evaluaciones en tiempo real para estudiantes y docentes.
           </p>
 
-          <a href="#" class="btn btn-danger btn-lg rounded-pill mt-auto">
+          <a href="#" class="btn btn-dark btn-lg rounded-pill mt-auto">
             Conocer Más
           </a>
         </div>
@@ -183,23 +184,24 @@
     <div class="col-12 col-md-6 col-lg-4 fade-in">
       <div class="card h-100 shadow-sm border-0 rounded-4">
         <div class="card-header bg-white border-0 text-center">
-          <h5 class="card-title mb-0 fw-semibold text-dark">E-commerce Completo</h5>
+          <h5 class="card-title mb-0 fw-semibold text-dark">Data analysis system</h5>
         </div>
 
-        <img src="../img/work33.png" alt="E-commerce" class="project-image w-100"
+        <img src="../img/work33.png" alt="Analisis" class="project-image w-100"
           onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         <div
-          class="image-placeholder bg-danger d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
-          🛒 E-commerce
+          class="image-placeholder bg-dark d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
+          <i class="bi bi-circle-fill pe-2"></i>
+          Analysis System
         </div>
 
         <div class="card-body d-flex flex-column">
           <p class="card-text text-muted flex-grow-1">
-            Plataforma de comercio electrónico integral con carrito de compras,
-            pasarelas de pago seguras y panel administrativo completo.
+            Plataforma de análisis de datos con visualizaciones interactivas, filtros avanzados y reportes en tiempo
+            real para la toma de decisiones estratégicas.
           </p>
 
-          <a href="#" class="btn btn-danger btn-lg rounded-pill mt-auto">
+          <a href="#" class="btn btn-dark btn-lg rounded-pill mt-auto">
             Conocer Más
           </a>
         </div>
@@ -208,62 +210,37 @@
 
     <div class="col-12 col-md-6 col-lg-4 fade-in">
       <div class="card h-100 shadow-sm border-0 rounded-4">
-        <div class="card-header bg-white border-0 text-center">
-          <h5 class="card-title mb-0 fw-semibold text-dark">E-commerce Completo</h5>
+        <div class="card-header bg-dark border-0 text-center">
+          <h5 class="card-title mb-0 fw-semibold text-dark">Web Design</h5>
         </div>
 
         <img src="../img/work55.png" alt="E-commerce" class="project-image w-100"
           onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         <div
-          class="image-placeholder bg-danger d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
-          🛒 E-commerce
+          class="image-placeholder bg-dark d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
+          <i class="bi bi-circle-fill pe-2"></i>
+          Design Studio
         </div>
 
         <div class="card-body d-flex flex-column">
           <p class="card-text text-muted flex-grow-1">
-            Plataforma de comercio electrónico integral con carrito de compras,
-            pasarelas de pago seguras y panel administrativo completo.
+            Plataforma de diseño web interactivo que permite crear, personalizar y optimizar sitios responsivos con
+            experiencia de usuario intuitiva.
           </p>
 
-          <a href="#" class="btn btn-danger btn-lg rounded-pill mt-auto">
+          <a href="#" class="btn btn-dark btn-lg rounded-pill mt-auto">
             Conocer Más
           </a>
         </div>
       </div>
     </div>
 
-    <!-- Proyecto 6 - Destacado -->
-    <div class="col-12 col-md-6 col-lg-4 fade-in">
-      <div class="card h-100 shadow border-primary border-3 rounded-4">
-        <div class="card-header bg-primary text-white text-center">
-          <h5 class="card-title mb-0 fw-bold">⭐ Sistema de Gestión ERP</h5>
-        </div>
 
-        <img src="../img/work66.png" alt="Sistema ERP" class="project-image w-100"
-          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-        <div
-          class="image-placeholder bg-primary d-flex align-items-center justify-content-center text-white fs-5 fw-semibold">
-          ⚙️ Sistema ERP
-        </div>
-
-        <div class="card-body d-flex flex-column">
-          <div class="badge bg-primary mb-2 align-self-start">Proyecto Destacado</div>
-          <p class="card-text text-muted flex-grow-1">
-            Solución empresarial completa que integra CRM, inventarios, contabilidad
-            y reportes avanzados en una sola plataforma centralizada.
-          </p>
-
-          <a href="#" class="btn btn-primary btn-lg rounded-pill mt-auto">
-            <i class="bi bi-star-fill me-2"></i>Conocer Más
-          </a>
-        </div>
-      </div>
-    </div>
 
   </div>
 
   <!-- Sección adicional -->
-  
+
 
   <!-- seccion de contacto -->
   <section class="container-fluid mt-5 py-5 rounded-5">
@@ -317,11 +294,16 @@
   </section>
 
 
-  <section class="container-fluid my-5 px-4">
+  <section class="container-fluid my-5 px-4" data-aos="fade-up" data-aos-duration="2000">
     <div class="row border shadow rounded-4">
-      <div class="col-3 d-flex align-items-start flex-column mt-5 justify-content-center ps-2">
-        <h2 class="tipoDeFuente tituloS ">Social.</h2>
-        <button type="submit" class="btn btn-outline-primary"> <i class="bi bi-linkedin"></i> LinkedIn</button>
+      <div class="col-3 d-flex align-items-start flex-column mt-5 justify-content-center px-2 g-5">
+        <h2 class="tipoDeFuente tituloS">Social.</h2>
+        <button type="submit" class="btn btn-outline-primary py-2 my-2"> <i class="bi bi-linkedin"></i>
+          LinkedIn</button>
+        <button type="submit" class="btn btn-outline-danger py-2 my-2"> <i class="bi bi-instagram"></i>
+          Instagram</button>
+        <button type="submit" class="btn btn-outline-primary py-2 my-2"> <i class="bi bi-facebook"></i>
+          Facebook</button>
       </div>
       <div class="col-9">
         <div class="container">
@@ -335,18 +317,19 @@
 
               <button type="submit" class="btn btn-danger">
                 Subscribe
-                <span class="ms-2"> <i class="bi bi-arrow-bar-up"></i> </span>
+                <span class="ms-2"> <i class="bi bi-circle-fill"></i> </span>
               </button>
             </form>
             <p class="tipoDeFuente tituloP">
-              Join our newsletter for updates on the<br>
-              latest in spatial computing and XR.
+              Únase a nuestro newsletter para actualizaciones<br>
+              lo ultimo en desartrollo de software
             </p>
           </div>
         </div>
       </div>
     </div>
   </section>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
