--- a/html/about.html
+++ b/html/about.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="../html/work.html">Work.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact.</a>
+                        <a class="nav-link" href="#contacto">Contact.</a>
                     </li>
                 </ul>
             </div>
@@ -494,7 +494,7 @@
 
 
     <!-- seccion de contacto -->
-    <section class="container-fluid mt-5 py-5 rounded-5">
+    <section class="container-fluid mt-5 py-5 rounded-5" id="contacto">
         <section class="container-fluid bg-dark text-light shadow border-4 py-5 px-2 rounded-4" data-aos="fade-up"
             data-aos-duration="3000">
             <div class="row justify-content-center align-items-center ">
@@ -585,11 +585,21 @@
         </div>
     </section>
 
-    <div class="container" style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.951417279537!2d-75.60185218472218!3d1.613903798243105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e39b5f3c0d7abff%3A0x9b2c3d0f42a1d6c2!2sUniversidad%20de%20la%20Amazonia!5e0!3m2!1ses!2sco!4v1694809500000!5m2!1ses!2sco" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;"
-            allowfullscreen loading="lazy">
-        </iframe>
+    <div class="container my-5 d-flex justify-content-center">
+        <div class="map-widget border rounded-5 shadow">
+            <div class="map-header text-center tipoDeFuente tituloS">
+                Nuestra Ubicación
+            </div>
+            <div class="map-container d-flex justify-content-center p-3">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.951417279537!2d-75.6042556!3d1.620127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e244e2307a3b2af%3A0x2eb9e14897cad6c7!2sUniversidad%20de%20la%20Amazonia%20Sede%20Principal!5e0!3m2!1ses!2sco!4v1694809500000!5m2!1ses!2sco"
+                    allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                    style="width: 75vw; height: 400px;" class="rounded-5">
+                </iframe>
+            </div>
+        </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
