--- a/html/work.html
+++ b/html/work.html
@@ -17,6 +17,7 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
 
 </head>
 
@@ -47,7 +48,7 @@
             <a class="nav-link" href="../html/work.html">Work.</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact.</a>
+            <a class="nav-link" href="#contacto">Contact.</a>
           </li>
         </ul>
       </div>
@@ -57,20 +58,19 @@
 
 
   <div class="container-fluid my-5 p-5" style="height: 75vh;">
-    <div class="row tipoDeFuente tituloSF">
+    <div class="row tipoDeFuente tituloSF" data-aos="fade-up" data-aos-duration="2000">
       work.
     </div>
-    <div class="row tipoDeFuente tituloSP">
-      <div class="col-md-1"></div>
+    <div class="row tipoDeFuente tituloSP " data-aos="fade-up" data-aos-duration="2000">      
       Building spatial computing software for the world’s most innovative enterprises.
     </div>
   </div>
 
   <!-- contenido works -->
 
-  <div class="container-fluid row g-4 p-3">
+  <div class="container-fluid row g-4 p-3" data-aos="fade-up" data-aos-duration="2000">
 
-    <div class="col-12 col-md-6 col-lg-4 fade-in">
+    <div class="col-12 col-md-6 col-lg-4 fade-in"  >
       <div class="card shadow-sm border-0 rounded-4">
         <div class="card-header bg-white border-0 text-center">
           <h5 class="card-title mb-0 fw-semibold text-dark"> Digital Data Visualization </h5>
@@ -126,7 +126,7 @@
     </div>
 
     <!-- Proyecto 4 -->
-    <div class="col-12 col-md-6 col-lg-4 fade-in">
+    <div class="col-12 col-md-6 col-lg-4 fade-in" data-aos="fade-up" data-aos-duration="2000">
       <div class="card h-100 shadow-sm border-0 rounded-4">
         <div class="card-header bg-white border-0 text-center">
           <h5 class="card-title mb-0 fw-semibold text-dark">App Mobile Nativa</h5>
@@ -168,7 +168,7 @@
           Virtual
         </div>
 
-        <div class="card-body d-flex flex-column">
+        <div class="card-body d-flex flex-column" data-aos="fade-up" data-aos-duration="2000">
           <p class="card-text text-muted flex-grow-1">
             Plataforma de aprendizaje virtual interactiva, con cursos multimedia, seguimiento del progreso y
             evaluaciones en tiempo real para estudiantes y docentes.
@@ -239,14 +239,14 @@
 
   </div>
 
-  <!-- Sección adicional -->
 
 
   <!-- seccion de contacto -->
-  <section class="container-fluid mt-5 py-5 rounded-5">
+
+  <section class="container-fluid mt-5 py-5 rounded-5" id="contacto" data-aos="fade-up" data-aos-duration="2000">
     <section class="container-fluid bg-dark text-light shadow border-4 py-5 px-2 rounded-4">
       <div class="row justify-content-center align-items-center ">
-        <!-- Columna izquierda: Formulario -->
+
         <div class="col-md-5">
           <div class="bg-white text-dark p-4 rounded shadow d-flex flex-column g-5">
             <h4 class="tipoDeFuente tituloS">Ready to <span class="text-primary">build XR?</span></h4>
@@ -272,7 +272,7 @@
           </div>
         </div>
 
-        <!-- Columna derecha: Texto -->
+
         <div class="col-md-6 ps-md-5 mt-4 mt-md-0">
           <h1 class="tipoDeFuente tituloF">Let's talk.</h1>
           <p class="lead">
@@ -329,11 +329,32 @@
       </div>
     </div>
   </section>
-  
+
+  <div class="container my-5 d-flex justify-content-center">
+    <div class="map-widget border rounded-5 shadow">
+      <div class="map-header text-center tipoDeFuente tituloS">
+        Nuestra Ubicación
+      </div>
+      <div class="map-container d-flex justify-content-center p-3">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.951417279537!2d-75.6042556!3d1.620127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e244e2307a3b2af%3A0x2eb9e14897cad6c7!2sUniversidad%20de%20la%20Amazonia%20Sede%20Principal!5e0!3m2!1ses!2sco!4v1694809500000!5m2!1ses!2sco"
+          allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="width: 75vw; height: 400px;"
+          class="rounded-5">
+        </iframe>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
+
 
 </html>
