--- a/index.html
+++ b/index.html
@@ -373,15 +373,20 @@
         </div>
     </section>
 
-    <div class="map-widget">
-        <div class="map-header">¡¡Puedes encontrarnos aquí!!</div>
-        <div class="map-container">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.951417279537!2d-75.60185218472218!3d1.613903798243105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e39b5f3c0d7abff%3A0x9b2c3d0f42a1d6c2!2sUniversidad%20de%20la%20Amazonia!5e0!3m2!1ses!2sco!4v1694809500000!5m2!1ses!2sco"
-                allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+    <div class="container my-5 d-flex justify-content-center" >
+        <div class="map-widget border rounded-5 shadow">
+            <div class="map-header text-center tipoDeFuente tituloS">
+                Nuestra Ubicación
+            </div>
+            <div class="map-container d-flex justify-content-center p-3">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.951417279537!2d-75.6042556!3d1.620127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e244e2307a3b2af%3A0x2eb9e14897cad6c7!2sUniversidad%20de%20la%20Amazonia%20Sede%20Principal!5e0!3m2!1ses!2sco!4v1694809500000!5m2!1ses!2sco"
+                    allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="width: 75vw; height: 400px;" class="rounded-5">
+                </iframe>
+            </div>
         </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
